# tagth

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tagth.py  test_tagth.py
.github/: CODEOWNERS
.github/workflows/: publish.yml
.jules/: sentinel.md
docs/superpowers/plans/: 2026-04-22-patch-release-1-2-5.md
src/tagth/: __init__.py  tagth.py
test/: test_allowed.py  test_normalize_principal.py  test_normalize_resource.py  test_normilize_principle.py  test_normilize_resource.py  test_resolve.py  test_security_fixes.py  test_security_prefix.py  test_tagth.py  test_vulnerability_fix.py
