[project]
name = "tagth"
version = "1.1.0"
description = "Pure Python Stateless Tag-Based Authorization Library"
authors = [
    { name = "Boris Resnick", email = "boris.resnick@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/scartill/tagth"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tagth"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "twine>=6.1.0",
]
