[project]
name = "tagth"
version = "1.2.1"
description = "Pure Python Stateless Tag-Based Authorization Library"
authors = [
    { name = "Boris Resnick", email = "boris.resnick@gmail.com" }
]
dependencies = [
    "pyparsing>=3.1.4",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/scartill/tagth"
Changelog = "https://github.com/scartill/tagth/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tagth"]

[dependency-groups]
dev = [
    "ptpython>=3.0.29",
    "pytest>=8.3.5",
    "twine>=6.1.0",
]
